# OpenGL_Shapes

./: .gitignore  CMakeLists.txt  README.md
Shaders/: FragmentShader.frag  VertexShader.vert
include/Rendering/: Rendering.h
include/State/: State.h
include/Utils/: Utils.h
include/glad/: glad.h
src/: 2DDrawing.c  glad.c
src/Rendering/: Rendering.c  Shader.c
src/State/: ControlState.c  EditMode.c  InsertMode.c
src/Utils/: FileIO.c  Matrix.c  Utils.c
